[gd_scene load_steps=4 format=3 uid="uid://s24jn5usad8q"]

[ext_resource type="Theme" uid="uid://8783p7rjqna0" path="res://assets/buttons/themes/app_theme.tres" id="1_gj6im"]
[ext_resource type="Script" path="res://scripts/cursor/slider_field.gd" id="2_fqnhp"]
[ext_resource type="PackedScene" uid="uid://jhfkcwhkj4oj" path="res://scenes/menu/components/help_button.tscn" id="3_lwxts"]

[node name="SliderField" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1027.0
offset_bottom = -942.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gj6im")
script = ExtResource("2_fqnhp")

[node name="HSlider3" type="HSlider" parent="."]
layout_mode = 0
offset_top = 31.0
offset_right = 438.0
offset_bottom = 102.0
min_value = 5.0
value = 16.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 253.0
offset_bottom = 38.0
text = "FieldName
"

[node name="SpinBox" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 286.0
offset_top = 1.0
offset_right = 440.0
offset_bottom = 41.0
min_value = 5.0
value = 16.0
alignment = 1

[node name="HelpButton" parent="." instance=ExtResource("3_lwxts")]
layout_mode = 0
offset_left = 174.0
offset_top = 9.0
offset_right = 224.0
offset_bottom = 59.0
scale = Vector2(0.5, 0.5)

[connection signal="value_changed" from="HSlider3" to="." method="_on_h_slider_3_value_changed"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_spin_box_value_changed"]
